objects/AT_Workspace__c.object
<CustomObject>
    <fields>
        <fullName>AT_Comments__c</fullName>
        <description>Free form notes</description>
        <label>Workspace Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AT_Competitor__c</fullName>
        <description>AT Competitor name</description>
        <label>Workspace Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alien Vault</fullName>
                </value>
                <value>
                    <fullName>Aruba Clearpass</fullName>
                </value>
                <value>
                    <fullName>Avanan</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>BAE Systems</fullName>
                </value>
                <value>
                    <fullName>Barracuda Networks</fullName>
                </value>
                <value>
                    <fullName>Bettercloud</fullName>
                </value>
                <value>
                    <fullName>Bitglass</fullName>
                </value>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>Bradford Networks</fullName>
                </value>
                <value>
                    <fullName>Bromium</fullName>
                </value>
                <value>
                    <fullName>CarbonBlack</fullName>
                </value>
                <value>
                    <fullName>Centrify</fullName>
                </value>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>CipherCloud</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Cloudera</fullName>
                </value>
                <value>
                    <fullName>Corero</fullName>
                </value>
                <value>
                    <fullName>CounterTack</fullName>
                </value>
                <value>
                    <fullName>Crowdstrike</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Cybereason</fullName>
                </value>
                <value>
                    <fullName>Cyberoam</fullName>
                </value>
                <value>
                    <fullName>CyberReason</fullName>
                </value>
                <value>
                    <fullName>Cylance</fullName>
                </value>
                <value>
                    <fullName>Damballa</fullName>
                </value>
                <value>
                    <fullName>Darktrace</fullName>
                </value>
                <value>
                    <fullName>Dell - SonicWall</fullName>
                </value>
                <value>
                    <fullName>EndGame</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Expected_Book_Date__c</fullName>
        <description>Date AT opportunity is expected to book, may or may not align with Opportunity book date</description>
        <label>Workspace Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AT_Expected_Product__c</fullName>
        <description>AT Product Booking value</description>
        <inlineHelpText>Expected Product Booking Revenue Amount in Thousands</inlineHelpText>
        <label>Workspace Expected Product($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AT_Expected_Service__c</fullName>
        <description>Service booking value associated with AT Service</description>
        <inlineHelpText>Expected Service Booking Revenue Amount in Thousands</inlineHelpText>
        <label>Workspace Expected Service($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AT_Flags__c</fullName>
        <description>Field used to flag a workspace with different values</description>
        <label>Workspace Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A2C</fullName>
                </value>
                <value>
                    <fullName>ACS-ISE Migration</fullName>
                </value>
                <value>
                    <fullName>ASA Refresh 2017</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Contact Center-High Complexity</fullName>
                </value>
                <value>
                    <fullName>Cooper Power Systems</fullName>
                </value>
                <value>
                    <fullName>Cyber Insurance</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Response Clinics</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>DTG Franchise Win</fullName>
                </value>
                <value>
                    <fullName>DTG KSO</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Buying Programs</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Competition</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Operational</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Other</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Pricing</fullName>
                </value>
                <value>
                    <fullName>EA-At Risk / Product (Positioning / Roadmap etc.)</fullName>
                </value>
                <value>
                    <fullName>Easy Play</fullName>
                </value>
                <value>
                    <fullName>EBC</fullName>
                </value>
                <value>
                    <fullName>Enablement Deal</fullName>
                </value>
                <value>
                    <fullName>Franchise Win</fullName>
                </value>
                <value>
                    <fullName>FY17 FastStart-Security ELA</fullName>
                </value>
                <value>
                    <fullName>IBM-Integrated Security Products</fullName>
                </value>
                <value>
                    <fullName>IBM-Security Service</fullName>
                </value>
                <value>
                    <fullName>IBM-XGS (IPS) Migration</fullName>
                </value>
                <value>
                    <fullName>Interlock Initiative-Focus 50</fullName>
                </value>
                <value>
                    <fullName>Interlock Initiative-Other</fullName>
                </value>
                <value>
                    <fullName>ISV Partner-Cleversafe</fullName>
                </value>
                <value>
                    <fullName>ISV Partner-Commvault</fullName>
                </value>
                <value>
                    <fullName>ISV Partner-Microsoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Forecast_Status__c</fullName>
        <description>AT Opportunity status (Commit, Upside = Forecast, None = Identified opportunity, not yet qualified)</description>
        <label>Workspace Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Not Forecastable</fullName>
                    <default>true</default>
                    <label>Not Forecastable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Next_Step_Date__c</fullName>
        <description>Estimated date next step to be completed by the PSS</description>
        <label>zzPSS Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AT_Next_Step__c</fullName>
        <description>Next action by PSS to move deal forward</description>
        <label>zzPSS Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_No_of_days_Overdue__c</fullName>
        <description>Number of days a AT workspace is overdue w.r.t current forecast due date</description>
        <formula>CASE( 
MOD( DATEVALUE( MID( TEXT(NOW()), 0, 10 ) ) - DATE(1900, 1, 7), 7), 
1, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )-1, 
2, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )-2, 
3, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )+4, 
4, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )+3, 
5, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )+2, 
6, DATEVALUE(MID(TEXT(NOW()), 0, 10 ) )+1, 
DATEVALUE(MID(TEXT( NOW()), 0, 10 ))) - AT_Expected_Book_Date__c</formula>
        <label>PSS No. of days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AT_Optional_1__c</fullName>
        <description>Field usage to be defined by each AT Team</description>
        <label>Workspace Optional 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Optional_2__c</fullName>
        <description>Field usage to be defined by each AT Team</description>
        <label>Workspace Optional 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Other_Competitor__c</fullName>
        <description>List AT Competitor if not found in AT Competitor Pick list</description>
        <label>Workspace Other Competitor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Other_Partner__c</fullName>
        <description>List AT Partner if not found in AT Partner Pick list</description>
        <label>Workspace Other Partner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Partner__c</fullName>
        <description>AT Resale Partner name</description>
        <label>Workspace Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2E2</fullName>
                </value>
                <value>
                    <fullName>3T Systems</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Accudata Systems, INC</fullName>
                </value>
                <value>
                    <fullName>Adesta, LLC</fullName>
                </value>
                <value>
                    <fullName>ADP, INC</fullName>
                </value>
                <value>
                    <fullName>ADT Security Services, INC</fullName>
                </value>
                <value>
                    <fullName>AEC Group</fullName>
                </value>
                <value>
                    <fullName>Airopath</fullName>
                </value>
                <value>
                    <fullName>Alexander Open Systems, INC</fullName>
                </value>
                <value>
                    <fullName>Alliant Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Allstream</fullName>
                </value>
                <value>
                    <fullName>Alltel Corp.</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>AMS.NET</fullName>
                </value>
                <value>
                    <fullName>Analysts Intl Corp.</fullName>
                </value>
                <value>
                    <fullName>Apptis, INC</fullName>
                </value>
                <value>
                    <fullName>ARINC, INC</fullName>
                </value>
                <value>
                    <fullName>Aronson Security, INC</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T, INC</fullName>
                </value>
                <value>
                    <fullName>Bear Data Systems, INC</fullName>
                </value>
                <value>
                    <fullName>Bell Canada</fullName>
                </value>
                <value>
                    <fullName>Bell Microproducts, INC</fullName>
                </value>
                <value>
                    <fullName>Benson Security Systems, INC</fullName>
                </value>
                <value>
                    <fullName>Blue Water Communication Group</fullName>
                </value>
                <value>
                    <fullName>BT America</fullName>
                </value>
                <value>
                    <fullName>B T Group PLC</fullName>
                </value>
                <value>
                    <fullName>Bulletproof Solutions, INC</fullName>
                </value>
                <value>
                    <fullName>Burwood Group, INC</fullName>
                </value>
                <value>
                    <fullName>Business Information Group, INC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Product__c</fullName>
        <description>One or more products from the selected sub-technology</description>
        <label>Workspace Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>AT_Sub_Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1900 VSEC</fullName>
                </value>
                <value>
                    <fullName>2000 WLAN Controller</fullName>
                </value>
                <value>
                    <fullName>2800 Security Router</fullName>
                </value>
                <value>
                    <fullName>2800 Sec-WAAS</fullName>
                </value>
                <value>
                    <fullName>2800 UC Router</fullName>
                </value>
                <value>
                    <fullName>2800 VSEC Router</fullName>
                </value>
                <value>
                    <fullName>2900 Security</fullName>
                </value>
                <value>
                    <fullName>2900 VSEC</fullName>
                </value>
                <value>
                    <fullName>3200 Mobile Access Router</fullName>
                </value>
                <value>
                    <fullName>3500 Wireless AP</fullName>
                </value>
                <value>
                    <fullName>3800 Security Router</fullName>
                </value>
                <value>
                    <fullName>3800 Sec-WAAS Router</fullName>
                </value>
                <value>
                    <fullName>3800 UC Router</fullName>
                </value>
                <value>
                    <fullName>3800 VSEC Router</fullName>
                </value>
                <value>
                    <fullName>3900 Security</fullName>
                </value>
                <value>
                    <fullName>3900 VSEC</fullName>
                </value>
                <value>
                    <fullName>4400 WLAN Controller</fullName>
                </value>
                <value>
                    <fullName>5500 WLAN Controller</fullName>
                </value>
                <value>
                    <fullName>6120XP</fullName>
                </value>
                <value>
                    <fullName>6140XP</fullName>
                </value>
                <value>
                    <fullName>7200 Security Router</fullName>
                </value>
                <value>
                    <fullName>7800 MCS Server</fullName>
                </value>
                <value>
                    <fullName>7900 Series IP Phones</fullName>
                </value>
                <value>
                    <fullName>7920 Family</fullName>
                </value>
                <value>
                    <fullName>800 Security Router</fullName>
                </value>
                <value>
                    <fullName>800 Series Wireless Router</fullName>
                </value>
                <value>
                    <fullName>89xx Phones</fullName>
                </value>
                <value>
                    <fullName>99xx Phones</fullName>
                </value>
                <value>
                    <fullName>Access Control</fullName>
                </value>
                <value>
                    <fullName>Access Registrar (AR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Sub_Technology__c</fullName>
        <description>Single sub-technology represented by this AT workspace</description>
        <label>Workspace Sub Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AT_Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access &amp; Aggregation</fullName>
                </value>
                <value>
                    <fullName>Access and Aggregation</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>B-Series Blade Servers</fullName>
                </value>
                <value>
                    <fullName>C3X60 Servers</fullName>
                </value>
                <value>
                    <fullName>CableAccessInfraCMSTS,QAM,HFC</fullName>
                </value>
                <value>
                    <fullName>CII</fullName>
                </value>
                <value>
                    <fullName>Cisco Container Platform</fullName>
                </value>
                <value>
                    <fullName>CiscoOne &amp; Other Software</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>CLOUD VIRTUALIZATION</fullName>
                </value>
                <value>
                    <fullName>Collaboration, Video &amp; Mobility</fullName>
                </value>
                <value>
                    <fullName>Conferencing</fullName>
                </value>
                <value>
                    <fullName>ConnDevices(STB,Modem,etc)</fullName>
                </value>
                <value>
                    <fullName>Connected Healthcare</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Content Security</fullName>
                </value>
                <value>
                    <fullName>C-Series Rack Servers</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>ELA</fullName>
                </value>
                <value>
                    <fullName>Emerging Solutions Advisory (ESA)</fullName>
                </value>
                <value>
                    <fullName>Encoding&amp;Stream</fullName>
                </value>
                <value>
                    <fullName>Ent.Access Routing</fullName>
                </value>
                <value>
                    <fullName>Ent.Edge Routing</fullName>
                </value>
                <value>
                    <fullName>Ent.Small Business Switching</fullName>
                </value>
                <value>
                    <fullName>Ent.Switching Access</fullName>
                </value>
                <value>
                    <fullName>Ent.Switching-ConnetdPlatforms</fullName>
                </value>
                <value>
                    <fullName>Ent.Switching Core</fullName>
                </value>
                <value>
                    <fullName>Ent.Wireless</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Team__c</fullName>
        <description>PSS's AT (Region) Team</description>
        <label>Workspace Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT-Asia-Pacific</fullName>
                </value>
                <value>
                    <fullName>AT-EMER</fullName>
                </value>
                <value>
                    <fullName>AT-Japan</fullName>
                </value>
                <value>
                    <fullName>CIS-Canada</fullName>
                </value>
                <value>
                    <fullName>CIS-Central</fullName>
                </value>
                <value>
                    <fullName>CIS-East</fullName>
                </value>
                <value>
                    <fullName>CIS-South</fullName>
                </value>
                <value>
                    <fullName>CIS-SP</fullName>
                </value>
                <value>
                    <fullName>CIS-West</fullName>
                </value>
                <value>
                    <fullName>DC-Canada</fullName>
                </value>
                <value>
                    <fullName>DC-Com Central</fullName>
                </value>
                <value>
                    <fullName>DC-Com East</fullName>
                </value>
                <value>
                    <fullName>DC-Com South</fullName>
                </value>
                <value>
                    <fullName>DC-Com West</fullName>
                </value>
                <value>
                    <fullName>DC-Ent Central</fullName>
                </value>
                <value>
                    <fullName>DC-Ent East</fullName>
                </value>
                <value>
                    <fullName>DC-Ent South</fullName>
                </value>
                <value>
                    <fullName>DC-Ent West</fullName>
                </value>
                <value>
                    <fullName>DC-Federal</fullName>
                </value>
                <value>
                    <fullName>DC-GET</fullName>
                </value>
                <value>
                    <fullName>DC-SLED Central/East</fullName>
                </value>
                <value>
                    <fullName>DC-SLED South/West</fullName>
                </value>
                <value>
                    <fullName>DC-SP</fullName>
                </value>
                <value>
                    <fullName>ET-Digital Media</fullName>
                </value>
                <value>
                    <fullName>ET-HQ</fullName>
                </value>
                <value>
                    <fullName>Physical Security</fullName>
                </value>
                <value>
                    <fullName>Optical-SP</fullName>
                </value>
                <value>
                    <fullName>SA VTG</fullName>
                </value>
                <value>
                    <fullName>Sec/WL-Canada</fullName>
                </value>
                <value>
                    <fullName>Sec-SLED C-E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_Technology__c</fullName>
        <description>Technology represented by this AT Workspace</description>
        <label>Workspace Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOUD VIRTUALIZATION</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION</fullName>
                </value>
                <value>
                    <fullName>COMPUTING SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>DIGITAL MEDIA</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>MOBILITY</fullName>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                </value>
                <value>
                    <fullName>SP ROUTING</fullName>
                </value>
                <value>
                    <fullName>SP VIDEO INFRA</fullName>
                </value>
                <value>
                    <fullName>SP VIDEO SW &amp; SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>SWITCHING</fullName>
                </value>
                <value>
                    <fullName>WIRELESS</fullName>
                </value>
                <value>
                    <fullName>Advanced Services</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>ISG-Ecosystems</fullName>
                </value>
                <value>
                    <fullName>Refurbished</fullName>
                </value>
                <value>
                    <fullName>S+CC</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of Account associated to the Opportunity</description>
        <formula>Opportunity__r.Account.CRName__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opportunity_Workspace_Link__c</fullName>
        <description>Concatenation of Account Name and Opportunity, Workspace Links</description>
        <formula>Account_Name__c +
 " | " +
HYPERLINK("/" &amp; Opportunity__r.Id, Opportunity__r.Name) + 
" | " +
HYPERLINK("/" &amp; Id, Name)</formula>
        <label>Account | Opportunity | Workspace Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opportunity_Workspace__c</fullName>
        <description>Concatenation of Account, Opportunity and Workspace</description>
        <formula>Account_Name__c +
" | " +
Opportunity__r.Name +
" | " +
Name</formula>
        <label>Account | Opportunity | Workspace</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Workspace_Link__c</fullName>
        <description>Concatenation of Account Name and Workspace Link</description>
        <formula>Account_Name__c + 
" | " + 
HYPERLINK("/" &amp; Id, Name)</formula>
        <label>Account | Workspace Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Workspace__c</fullName>
        <description>Concatenation of Account and  Workspace</description>
        <formula>Account_Name__c + 
" | " + 
Name</formula>
        <label>Account | Workspace</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Use_Case_Info__c</fullName>
        <description>Identify the key business and/or technical characteristics associated with the customer’s environment, initiative or planned use of this technology.</description>
        <label>Additional Use Case Info</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>AT_Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Hypervisor-Citrix</fullName>
                </value>
                <value>
                    <fullName>Hypervisor-MSFT</fullName>
                </value>
                <value>
                    <fullName>Hypervisor-Oracle VM</fullName>
                </value>
                <value>
                    <fullName>Hypervisor-Other</fullName>
                </value>
                <value>
                    <fullName>Hypervisor-Red Hat</fullName>
                </value>
                <value>
                    <fullName>Hypervisor-VMWare</fullName>
                </value>
                <value>
                    <fullName>Mgmt-BMC</fullName>
                </value>
                <value>
                    <fullName>Mgmt-CA</fullName>
                </value>
                <value>
                    <fullName>Mgmt-CIAC</fullName>
                </value>
                <value>
                    <fullName>Mgmt-Cloupia</fullName>
                </value>
                <value>
                    <fullName>Mgmt-HP</fullName>
                </value>
                <value>
                    <fullName>Mgmt-IBM</fullName>
                </value>
                <value>
                    <fullName>Mgmt-IBM Tivoli</fullName>
                </value>
                <value>
                    <fullName>Mgmt-MSFT</fullName>
                </value>
                <value>
                    <fullName>Mgmt-Newscale</fullName>
                </value>
                <value>
                    <fullName>Mgmt-Tidal</fullName>
                </value>
                <value>
                    <fullName>Mgmt-Zenoss</fullName>
                </value>
                <value>
                    <fullName>OS-MSFT 2008</fullName>
                </value>
                <value>
                    <fullName>OS-MSFT 2012</fullName>
                </value>
                <value>
                    <fullName>OS-RedHat</fullName>
                </value>
                <value>
                    <fullName>OS-Solaris</fullName>
                </value>
                <value>
                    <fullName>OS-SUSE</fullName>
                </value>
                <value>
                    <fullName>OS-Vmware</fullName>
                </value>
                <value>
                    <fullName>Storage-EMC</fullName>
                </value>
                <value>
                    <fullName>Storage-HITACHI</fullName>
                </value>
                <value>
                    <fullName>Storage-HP</fullName>
                </value>
                <value>
                    <fullName>Storage-IBM</fullName>
                </value>
                <value>
                    <fullName>Storage-NET APP</fullName>
                </value>
                <value>
                    <fullName>Storage-Other</fullName>
                </value>
                <value>
                    <fullName>Storage-Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adoption_Strategy__c</fullName>
        <description>What is the adoption strategy for the deal?</description>
        <label>Adoption Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Provided</fullName>
                </value>
                <value>
                    <fullName>Cisco AS Provided</fullName>
                </value>
                <value>
                    <fullName>SWSS Enhanced/Premium</fullName>
                </value>
                <value>
                    <fullName>Customer Provided</fullName>
                </value>
                <value>
                    <fullName>None/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>